--- a/soundsofnature/src/main/res/menu/player.xml
+++ b/soundsofnature/src/main/res/menu/player.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ru.eternalkaif.soundsofnature.activities.MainActivity" >
+    tools:context="ru.eternalkaif.soundsofnature.activities.PlayerActivity" >
     
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
