--- a/soundsofnature/src/main/res/layout/fragment_mainlistfragment_grid.xml
+++ b/soundsofnature/src/main/res/layout/fragment_mainlistfragment_grid.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ru.eternalkaif.soundsofnature.fragments.MainListFragmentFragment">
+    tools:context="ru.eternalkaif.soundsofnature.fragments.MainListFragment">
 
     <GridView
         android:id="@android:id/list"
