--- a/soundsofnature/src/main/res/menu/main.xml
+++ b/soundsofnature/src/main/res/menu/main.xml
@@ -2,7 +2,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ru.eternalkaif.soundsofnature.activities.MainActivity" >
-    
+
+    <item
+        android:id="@+id/action_reload"
+        android:title="@string/action_reload"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_action_navigation_refresh"
+        app:showAsAction="ifRoom" />
+
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
