--- a/soundsofnature/src/main/res/layout/row_songlist.xml
+++ b/soundsofnature/src/main/res/layout/row_songlist.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/songsText" />
+        android:id="@+id/songsText"
+        android:text="song"
+        android:textSize="16sp"
+        android:layout_centerVertical="true"/>
+    <Button
+        android:id="@+id/btn_play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_play"
+        android:layout_alignParentEnd="true"/>
+    <Button
+        android:id="@+id/btn_download"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_download"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/btn_play" />
 
-</LinearLayout>
+</RelativeLayout>
