--- a/soundsofnature/src/main/res/layout/fragment_player.xml
+++ b/soundsofnature/src/main/res/layout/fragment_player.xml
@@ -8,9 +8,19 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="ru.eternalkaif.soundsofnature.activities.PlayerActivity$PlaceholderFragment">
 
-    <TextView
-        android:text="@string/hello_world"
+
+    <SeekBar
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/seekBar"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+    <Button
+        android:id="@+id/btn_playpause"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_pause"
+        android:layout_below="@+id/seekBar"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
